Add X-Total header for collection responses
For `GET` and `HEAD` requests the `X-Total` response header value now
contains the total number of records found for the query.

This is applied to responses for collection/list requests and is useful
for e.g showing statistics or pagination components on the client.
