# openapi/openapi.yaml
@@ -24,6 +24,11 @@ paths:
       responses:
         200:
           description: Successful operation
+          headers:
+            X-Total:
+              schema:
+                type: integer
+              description: Total number of taxa returned for the query
           content:
             application/json:
               schema:
@@ -85,6 +90,11 @@ paths:
       responses:
         200:
           description: Successful operation
+          headers:
+            X-Total:
+              schema:
+                type: integer
+              description: Total number of media returned for the query
           content:
             application/json:
               schema:
@@ -110,6 +120,11 @@ paths:
       responses:
         200:
           description: Successful operation
+          headers:
+            X-Total:
+              schema:
+                type: integer
+              description: Total number of photographers/artists returned for the query
           content:
             application/json:
               schema:
